Bug fixed for table with vertical and horizontal scrollbar

--- a/variables/tables.less
+++ b/variables/tables.less
@@ -54,8 +54,8 @@
 //** Fixed table.
 @table-sb-fixed-col-border-right-color:     #666666;
 @table-sb-vh-fixed-col-border-right-color:  #666666;
-@table-sb-vh-fixed-col-scrollbar-rail-border-top-color: #dddddd;
-@table-sb-vh-col-border-right-color:        #dddddd;
+@table-sb-vh-fixed-col-scrollbar-rail-border-top-color: @table-border-color;
+@table-sb-vh-col-border-right-color:        @table-border-color;
 
 //** Editable table.
 @table-edit-editable-hover-border-color:    @brand-primary;
